--- a/style.css
+++ b/style.css
@@ -38,7 +38,8 @@ body * {
 }
 
 #container {
-    width: 360px;
+    width: 100%;
+    max-width: 523px;
     margin: auto;
     margin-top: 56px;
     padding: 0 24px;
