--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 
 :root{
 --text-color: white;
---bg-url: url(assets/bg-desktop.jpg);
+--bg-url: url(assets/bg-mobile.jpg);
 --stroke-color: rgba(255, 255, 255, 0.5);
 --surface-color: rgba(255, 255, 255, 0.1);
 --surface-color-hover: rgba(255, 255, 255, 0.05);
@@ -16,7 +16,7 @@
 
 .light{
 --text-color: black;
---bg-url: url(assets/bg-desktop-light.jpg);
+--bg-url: url(assets/bg-mobile-light.jpg);
 --stroke-color: rgba(0, 0, 0, 0.5);
 --surface-color: rgba(0, 0, 0, 0.05);
 --surface-color-hover: rgba(0, 0, 0, 0.02);
@@ -29,7 +29,7 @@ body{
     background-repeat: no-repeat;
     background-position: top center;
     background-size: cover;
-    
+    height: 100vh;
 }
 
 body * {
@@ -155,6 +155,13 @@ ul li a:hover {
         
 }
 
+/* Responsividade */
 
-
-
+@media (min-width: 700px){
+    :root{
+       --bg-url: url(assets/bg-desktop.jpg);
+    }
+    .light{
+        --bg-url: url(assets/bg-desktop-light.jpg);
+    }
+}
